--- a/environment.yml
+++ b/environment.yml
@@ -1,169 +1,298 @@
-name: Web
+name: streamlit
 channels:
+  - pytorch
+  - conda-forge
   - defaults
 dependencies:
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=4.5=1_gnu
+  - _py-xgboost-mutex=2.0=cpu_0
+  - abseil-cpp=20210324.2=h2531618_0
+  - aiohttp=3.8.1=py38h7f8727e_0
+  - aiosignal=1.2.0=pyhd8ed1ab_0
+  - anyio=2.2.0=py38h06a4308_1
+  - argon2-cffi=20.1.0=py38h27cfd23_1
+  - arrow-cpp=3.0.0=py38h6b21186_4
+  - async-timeout=4.0.1=pyhd8ed1ab_0
+  - async_generator=1.10=pyhd3eb1b0_0
+  - attrs=21.2.0=pyhd3eb1b0_0
+  - aws-c-common=0.4.57=he6710b0_1
+  - aws-c-event-stream=0.1.6=h2531618_5
+  - aws-checksums=0.1.9=he6710b0_0
+  - aws-sdk-cpp=1.8.185=hce553d0_0
+  - babel=2.9.1=pyhd3eb1b0_0
+  - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
-  - bottleneck=1.3.2=py39h7cc1a96_1
-  - brotli=1.0.9=ha925a31_2
-  - brotlipy=0.7.0=py39h2bbff1b_1003
-  - ca-certificates=2021.10.26=haa95532_2
-  - certifi=2021.10.8=py39haa95532_0
-  - cffi=1.15.0=py39h2bbff1b_0
+  - bleach=4.0.0=pyhd3eb1b0_0
+  - boost-cpp=1.73.0=h27cfd23_11
+  - bottleneck=1.3.2=py38heb32a55_1
+  - branca=0.4.2=pyhd8ed1ab_0
+  - brotli=1.0.9=he6710b0_2
+  - brotlipy=0.7.0=py38h27cfd23_1003
+  - bzip2=1.0.8=h7b6447c_0
+  - c-ares=1.17.1=h27cfd23_0
+  - ca-certificates=2021.10.8=ha878542_0
+  - cairo=1.16.0=hf32fb01_1
+  - certifi=2021.10.8=py38h578d9bd_1
+  - cffi=1.14.6=py38h400218f_0
+  - cfitsio=3.470=h2e3daa1_7
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - conda-package-handling=1.7.3=py39h8cc25b3_1
-  - console_shortcut=0.1.1=4
-  - cryptography=35.0.0=py39h71e12ea_0
+  - click=7.1.2=pyh9f0ad1d_0
+  - click-plugins=1.1.1=py_0
+  - cligj=0.7.2=pyhd8ed1ab_1
+  - conda-package-handling=1.7.3=py38h27cfd23_1
+  - cryptography=35.0.0=py38hd23ed53_0
+  - cudatoolkit=10.2.89=hfd86e86_1
+  - curl=7.78.0=h1ccaba5_0
   - cycler=0.11.0=pyhd3eb1b0_0
+  - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.5.1=py38h295c915_0
+  - decorator=5.1.0=pyhd3eb1b0_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
+  - double-conversion=3.1.5=he6710b0_1
+#  - entrypoints=0.3=py38_0
+  - expat=2.4.1=h2531618_2
+  - fiona=1.8.13.post1=py38hc820daa_0
+  - folium=0.12.1.post1=pyhd8ed1ab_1
+  - fontconfig=2.13.1=h6c09931_0
   - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.10.4=hd328e21_0
-  - icc_rt=2019.0.0=h0cc432a_1
-  - icu=58.2=ha925a31_3
+  - freetype=2.11.0=h70c0345_0
+  - freexl=1.0.6=h7f98852_0
+  - frozenlist=1.2.0=py38h7f8727e_0
+  - gdal=3.0.2=py38h4694593_1
+  - geopandas=0.10.2=pyhd8ed1ab_1
+  - geopandas-base=0.10.2=pyha770c72_1
+  - geos=3.8.0=he6710b0_0
+  - geotiff=1.6.0=h21e8280_0
+  - gflags=2.2.2=he6710b0_0
+  - giflib=5.2.1=h7b6447c_0
+  - glib=2.69.1=h5202010_0
+  - glog=0.5.0=h2531618_0
+  - google-api-core=2.3.2=pyhd8ed1ab_0
+  - google-api-core-grpc=2.3.2=hd8ed1ab_0
+  - google-cloud-bigquery=2.31.0=pyh44b312d_0
+  - google-cloud-bigquery-core=2.31.0=pyh44b312d_0
+  - google-cloud-bigquery-storage-core=2.10.1=pyh6c4a22f_0
+  - google-cloud-core=2.2.1=pyh6c4a22f_0
+  - google-crc32c=1.1.2=py38h8838a9a_0
+  - google-resumable-media=2.1.0=pyh6c4a22f_0
+  - googleapis-common-protos=1.53.0=py38h578d9bd_1
+  - grpc-cpp=1.39.0=hae934f6_5
+  - grpcio-status=1.41.1=pyhd8ed1ab_0
+  - gst-plugins-base=1.14.0=h8213a91_2
+  - gstreamer=1.14.0=h28cd5cc_2
+  - hdf4=4.2.13=h3ca952b_2
+  - hdf5=1.10.6=nompi_h7c3c948_1111
+  - icu=58.2=he6710b0_3
   - idna=3.3=pyhd3eb1b0_0
-  - intel-openmp=2021.4.0=haa95532_3556
+  - importlib-metadata=4.8.1=py38h06a4308_0
+  - importlib_metadata=4.8.1=hd3eb1b0_0
+  - intel-openmp=2021.4.0=h06a4308_3561
+#  - ipykernel=6.4.1=py38h06a4308_1
+#  - ipynb-py-convert=0.4.6=pyh9f0ad1d_0
+#  - ipython=7.29.0=py38hb070fc8_0
+#  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - jedi=0.18.0=py38h06a4308_1
+  - jinja2=3.0.2=pyhd3eb1b0_0
   - joblib=1.1.0=pyhd3eb1b0_0
-  - jpeg=9d=h2bbff1b_0
-  - keras=2.6.0=py39hd3eb1b0_0
-  - kiwisolver=1.3.1=py39hd77b12b_0
-  - libpng=1.6.37=h2a8f88b_0
-  - libtiff=4.2.0=hd0e1b90_0
-  - libwebp=1.2.0=h2bbff1b_0
-  - lz4-c=1.9.3=h2bbff1b_1
-  - matplotlib=3.5.0=py39haa95532_0
-  - matplotlib-base=3.5.0=py39h6214cd6_0
-  - menuinst=1.4.16=py39h2bbff1b_0
-  - mkl=2021.4.0=haa95532_640
-  - mkl-service=2.4.0=py39h2bbff1b_0
-  - mkl_fft=1.3.1=py39h277e83a_0
-  - mkl_random=1.2.2=py39hf11a4ad_0
+  - jpeg=9d=h7f8727e_0
+  - json-c=0.13.1=hbfbb72e_1002
+  - json5=0.9.6=pyhd3eb1b0_0
+  - jsonschema=3.2.0=pyhd3eb1b0_2
+#  - jupyter_client=7.0.6=pyhd3eb1b0_0
+#  - jupyter_core=4.9.1=py38h06a4308_0
+#  - jupyter_server=1.4.1=py38h06a4308_0
+#  - jupyterlab=3.2.1=pyhd3eb1b0_1
+#  - jupyterlab_pygments=0.1.2=py_0
+#  - jupyterlab_server=2.8.2=pyhd3eb1b0_0
+  - kealib=1.4.14=hcc255d8_2
+  - kiwisolver=1.3.1=py38h2531618_0
+  - krb5=1.19.2=hac12032_0
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.35.1=h7274673_9
+  - libboost=1.73.0=h3ff78a5_11
+  - libcrc32c=1.1.1=he6710b0_2
+  - libcst=0.3.23=py38h578d9bd_0
+  - libcurl=7.78.0=h0b77cf5_0
+  - libdap4=3.19.1=h6ec2957_0
+  - libedit=3.1.20210910=h7f8727e_0
+  - libev=4.33=h7f8727e_1
+  - libevent=2.1.8=h1ba5d50_1
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=9.3.0=h5101ec6_17
+  - libgdal=3.0.2=h7c14f60_1
+  - libgfortran-ng=7.5.0=ha8ba4b0_17
+  - libgfortran4=7.5.0=ha8ba4b0_17
+  - libgomp=9.3.0=h5101ec6_17
+  - libkml=1.3.0=h7ecb851_5
+  - libnetcdf=4.6.1=h2053bdc_4
+  - libnghttp2=1.46.0=hce63b2e_0
+  - libpng=1.6.37=hbc83047_0
+  - libpq=12.9=hc2c5182_1
+  - libprotobuf=3.17.2=h4ff587b_1
+  - libsodium=1.0.18=h7b6447c_0
+  - libspatialindex=1.9.3=h9c3ff4c_4
+  - libspatialite=4.3.0a=h793db0d_0
+  - libssh2=1.9.0=h1ba5d50_1
+  - libstdcxx-ng=9.3.0=hd4cf53a_17
+  - libthrift=0.14.2=hcc01f38_0
+  - libtiff=4.2.0=h85742a9_0
+  - libuuid=1.0.3=h7f8727e_2
+  - libwebp=1.2.0=h89dd481_0
+  - libwebp-base=1.2.0=h27cfd23_0
+  - libxcb=1.14=h7b6447c_0
+  - libxgboost=1.5.0=h295c915_1
+  - libxml2=2.9.12=h03d6c58_0
+  - lz4-c=1.9.3=h295c915_1
+  - mapclassify=2.4.3=pyhd8ed1ab_0
+  - markupsafe=2.0.1=py38h27cfd23_0
+  - matplotlib=3.5.0=py38h06a4308_0
+  - matplotlib-base=3.5.0=py38h3ed280b_0
+  - matplotlib-inline=0.1.2=pyhd3eb1b0_2
+  - mistune=0.8.4=py38h7b6447c_1000
+  - mkl=2021.4.0=h06a4308_640
+  - mkl-service=2.4.0=py38h7f8727e_0
+  - mkl_fft=1.3.1=py38hd3c417c_0
+  - mkl_random=1.2.2=py38h51133e4_0
+  - multidict=5.1.0=py38h27cfd23_2
+  - munch=2.5.0=py_0
   - munkres=1.1.4=py_0
-  - numexpr=2.7.3=py39hb80d3ca_1
-  - numpy=1.21.2=py39hfca59bb_0
-  - numpy-base=1.21.2=py39h0829f74_0
+  - mypy_extensions=0.4.3=py38h578d9bd_4
+  - nbclassic=0.2.6=pyhd3eb1b0_0
+  - nbclient=0.5.3=pyhd3eb1b0_0
+#  - nbconvert=6.1.0=py38h06a4308_0
+  - nbformat=5.1.3=pyhd3eb1b0_0
+  - ncurses=6.3=h7f8727e_2
+  - nest-asyncio=1.5.1=pyhd3eb1b0_0
+  - networkx=2.6.3=pyhd8ed1ab_1
+  - ninja=1.10.2=py38hd09550d_3
+  - notebook=6.4.6=py38h06a4308_0
+  - numexpr=2.7.3=py38h22e1b3c_1
+  - numpy=1.21.2=py38h20f2e39_0
+  - numpy-base=1.21.2=py38h79a1101_0
   - olefile=0.46=pyhd3eb1b0_0
-  - openssl=1.1.1l=h2bbff1b_0
+  - openjpeg=2.3.1=hf7af979_3
+  - openssl=1.1.1l=h7f8727e_0
+  - orc=1.6.9=ha97a36c_3
   - packaging=21.3=pyhd3eb1b0_0
-  - pandas=1.3.4=py39h6214cd6_0
-  - pillow=8.4.0=py39hd45dc43_0
-  - pip=21.2.4=py39haa95532_0
+  - pandas=1.3.4=py38h8c16a72_0
+  - pandocfilters=1.4.3=py38h06a4308_1
+  - parso=0.8.2=pyhd3eb1b0_0
+  - patsy=0.5.2=py38h06a4308_0
+  - pcre=8.45=h295c915_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=8.4.0=py38h5aabda8_0
+  - pixman=0.40.0=h36c2ea0_0
   - plotly=4.14.3=pyhd3eb1b0_0
-  - powershell_shortcut=0.0.1=3
-  - pycosat=0.6.3=py39h2bbff1b_0
+  - poppler=0.89.0=h669c267_1
+  - poppler-data=0.4.11=hd8ed1ab_0
+  - postgresql=12.9=hc2c5182_1
+  - proj=6.2.1=hc80f0dc_0
+  - prometheus_client=0.12.0=pyhd3eb1b0_0
+  - prompt-toolkit=3.0.20=pyhd3eb1b0_0
+  - proto-plus=1.18.1=pyhd8ed1ab_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - py-xgboost=1.5.0=py38h06a4308_1
+  - py4j=0.10.9.2=pyhd3eb1b0_0
+  - pyarrow=3.0.0=py38he0739d4_3
+  - pyasn1=0.4.8=py_0
+  - pycosat=0.6.3=py38h7b6447c_1
   - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.10.0=pyhd3eb1b0_0
   - pyopenssl=21.0.0=pyhd3eb1b0_1
   - pyparsing=3.0.4=pyhd3eb1b0_0
-  - pyqt=5.9.2=py39hd77b12b_6
-  - pysocks=1.7.1=py39haa95532_0
-  - python=3.9.5=h6244533_3
+  - pyproj=2.6.1.post1=py38hb3025e9_1
+  - pyqt=5.9.2=py38h05f1152_4
+  - pyrsistent=0.18.0=py38heee7806_0
+  - pysocks=1.7.1=py38h06a4308_0
+  - pyspark=3.1.2=pyhd3eb1b0_0
+  - python=3.8.12=h12debd9_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.8=2_cp38
+  - pytorch=1.6.0=py3.8_cuda10.2.89_cudnn7.6.5_0
   - pytz=2021.3=pyhd3eb1b0_0
-  - pywin32=228=py39hbaba5e8_1
-  - qt=5.9.7=vc14h73c81de_0
+  - pyu2f=0.1.5=pyhd8ed1ab_0
+  - pyyaml=5.4.1=py38h497a2fe_0
+  - pyzmq=22.3.0=py38h295c915_2
+  - qt=5.9.7=h5867ecd_1
+  - re2=2020.11.01=h2531618_1
+  - readline=8.1=h27cfd23_0
   - requests=2.26.0=pyhd3eb1b0_0
   - retrying=1.3.3=pyhd3eb1b0_2
-  - ruamel_yaml=0.15.100=py39h2bbff1b_0
-  - scikit-learn=1.0.1=py39hf11a4ad_0
-  - scipy=1.7.1=py39hbe87c03_2
+  - rtree=0.9.7=py38h02d302b_3
+  - ruamel_yaml=0.15.100=py38h27cfd23_0
+#  - scikit-learn=1.0.1=py38h51133e4_0
+#  - scipy=1.7.1=py38h292c36d_2
   - seaborn=0.11.2=pyhd3eb1b0_0
-  - setuptools=58.0.4=py39haa95532_0
-  - sip=4.19.13=py39hd77b12b_0
+  - send2trash=1.8.0=pyhd3eb1b0_1
+  - setuptools=58.0.4=py38h06a4308_0
+  - shapely=1.7.1=py38h1728cc4_0
+  - sip=4.19.13=py38he6710b0_0
   - six=1.16.0=pyhd3eb1b0_0
-  - sqlite=3.36.0=h2bbff1b_0
+  - snappy=1.1.8=he6710b0_0
+  - sniffio=1.2.0=py38h06a4308_1
+  - sqlite=3.36.0=hc218d9a_0
+  - statsmodels=0.13.0=py38h7f8727e_0
+  - terminado=0.9.4=py38h06a4308_0
+  - testpath=0.5.0=pyhd3eb1b0_0
   - threadpoolctl=2.2.0=pyh0d69192_0
-  - tk=8.6.11=h2bbff1b_0
-  - tornado=6.1=py39h2bbff1b_0
+  - tiledb=2.2.9=h91fcb0e_0
+  - tk=8.6.11=h1ccaba5_0
+  - torchvision=0.7.0=py38_cu102
+  - tornado=6.1=py38h27cfd23_0
   - tqdm=4.62.3=pyhd3eb1b0_1
+  - traitlets=5.1.1=pyhd3eb1b0_0
+  - typing_extensions=4.0.1=pyha770c72_0
+  - typing_inspect=0.7.1=pyh6c4a22f_0
+  - uriparser=0.9.3=he6710b0_1
   - urllib3=1.26.7=pyhd3eb1b0_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
+  - utf8proc=2.6.1=h27cfd23_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - webencodings=0.5.1=py38_1
   - wheel=0.37.0=pyhd3eb1b0_1
-  - win_inet_pton=1.1.0=py39haa95532_0
-  - wincertstore=0.2=py39haa95532_2
-  - xz=5.2.5=h62dcd97_0
-  - yaml=0.2.5=he774522_0
-  - zlib=1.2.11=h62dcd97_4
-  - zstd=1.4.9=h19a0ad4_0
+  - xerces-c=3.2.3=h780794e_0
+  - xgboost=1.5.0=py38h06a4308_1
+  - xlrd=2.0.1=pyhd3eb1b0_0
+  - xyzservices=2021.11.0=pyhd8ed1ab_1
+  - xz=5.2.5=h7b6447c_0
+  - yaml=0.2.5=h7b6447c_0
+  - yarl=1.6.3=py38h497a2fe_2
+  - zeromq=4.3.4=h2531618_0
+  - zipp=3.6.0=pyhd3eb1b0_0
+  - zlib=1.2.11=h7b6447c_3
+  - zstd=1.4.9=haebb681_0
   - pip:
-    - altair==4.1.0
-    - argon2-cffi==21.3.0
-    - argon2-cffi-bindings==21.2.0
-    - astor==0.8.1
-    - attrs==21.2.0
-    - backcall==0.2.0
-    - base58==2.1.1
-    - bleach==4.1.0
+    - absl-py==0.11.0
+    - astunparse==1.6.3
     - blinker==1.4
-    - cachetools==4.2.4
-    - click==7.1.2
-    - colorama==0.4.4
-    - debugpy==1.5.1
-    - decorator==5.1.0
-    - defusedxml==0.7.1
-#    - entrypoints==0.3
-    - gitdb==4.0.9
-    - gitpython==3.1.24
-    - google-api-core==2.3.2
-    - google-auth==2.3.3
-    - google-cloud-bigquery==2.31.0
-    - google-cloud-core==2.2.1
-    - google-crc32c==1.3.0
-    - google-resumable-media==2.1.0
-    - googleapis-common-protos==1.54.0
-    - grpcio==1.43.0
-    - grpcio-status==1.43.0
-    - ipykernel==6.6.0
-    - ipython==7.30.1
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.6.5
-    - jedi==0.18.1
-    - jinja2==3.0.3
-    - jsonschema==4.2.1
-    - jupyter-client==7.1.0
-    - jupyter-core==4.9.1
-    - jupyterlab-pygments==0.1.2
-    - jupyterlab-widgets==1.0.2
+    - cachetools==4.2.1
+    - flatbuffers==1.12
+    - gast==0.3.3
+    - google-auth==1.25.0
+    - google-auth-oauthlib==0.4.2
+    - google-pasta==0.2.0
+    - grpcio==1.32.0
+    - h5py==2.10.0
+    - keras-preprocessing==1.1.2
     - lxml==4.7.1
-    - markupsafe==2.0.1
-    - matplotlib-inline==0.1.3
-    - mistune==0.8.4
+    - markdown==3.3.3
     - multitasking==0.0.10
-    - nbclient==0.5.9
-    - nbconvert==6.3.0
-    - nbformat==5.1.3
-    - nest-asyncio==1.5.4
-    - notebook==6.4.6
-    - pandocfilters==1.5.0
-    - parso==0.8.3
-    - pickleshare==0.7.5
-    - prometheus-client==0.12.0
-    - prompt-toolkit==3.0.24
-    - proto-plus==1.19.8
-    - protobuf==3.19.1
-    - pyarrow==6.0.1
-    - pyasn1==0.4.8
+    - oauthlib==3.1.0
+    - opt-einsum==3.3.0
+    - pip==21.0.1
+    - protobuf==3.14.0
     - pyasn1-modules==0.2.8
-    - pydeck==0.7.1
-    - pygments==2.10.0
-    - pympler==0.9
-    - pyrsistent==0.18.0
-    - pytz-deprecation-shim==0.1.0.post0
-    - pywinpty==1.1.6
-    - pyzmq==22.3.0
-    - rsa==4.8
-    - send2trash==1.8.0
-    - smmap==5.0.0
+    - requests-oauthlib==1.3.0
+    - rsa==4.7
     - streamlit==1.2.0
-    - terminado==0.12.1
-    - testpath==0.5.0
-    - toml==0.10.2
-    - toolz==0.11.2
-    - traitlets==5.1.1
-    - typing-extensions==4.0.1
-    - tzdata==2021.5
-    - tzlocal==4.1
-    - validators==0.18.2
-    - watchdog==2.1.6
-    - wcwidth==0.2.5
-    - webencodings==0.5.1
-    - widgetsnbextension==3.5.2
+    - tensorboard==2.4.1
+    - tensorboard-plugin-wit==1.8.0
+    - tensorflow==2.4.1
+    - tensorflow-estimator==2.4.0
+    - termcolor==1.1.0
+    - typing-extensions==3.7.4.3
+    - werkzeug==1.0.1
+    - wrapt==1.12.1
     - yfinance==0.1.67
-prefix: C:\Users\WG\miniconda3\envs\Web
+prefix: /home/wgua/miniconda3/envs/streamlit
