--- a/environment.yml
+++ b/environment.yml
@@ -31,9 +31,9 @@ dependencies:
   - brotlipy=0.7.0=py38h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.17.1=h27cfd23_0
-  - ca-certificates=2021.10.8=ha878542_0
+  - ca-certificates=2021.10.26=h06a4308_2
   - cairo=1.16.0=hf32fb01_1
-  - certifi=2021.10.8=py38h578d9bd_1
+  - certifi=2021.10.8=py38h06a4308_0
   - cffi=1.14.6=py38h400218f_0
   - cfitsio=3.470=h2e3daa1_7
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
@@ -159,9 +159,9 @@ dependencies:
   - munkres=1.1.4=py_0
   - mypy_extensions=0.4.3=py38h578d9bd_4
   - nbclassic=0.2.6=pyhd3eb1b0_0
-  - nbclient=0.5.3=pyhd3eb1b0_0
+#  - nbclient=0.5.3=pyhd3eb1b0_0
 #  - nbconvert=6.1.0=py38h06a4308_0
-  - nbformat=5.1.3=pyhd3eb1b0_0
+#  - nbformat=5.1.3=pyhd3eb1b0_0
   - ncurses=6.3=h7f8727e_2
   - nest-asyncio=1.5.1=pyhd3eb1b0_0
   - networkx=2.6.3=pyhd8ed1ab_1
@@ -206,11 +206,11 @@ dependencies:
   - pyqt=5.9.2=py38h05f1152_4
   - pyrsistent=0.18.0=py38heee7806_0
   - pysocks=1.7.1=py38h06a4308_0
-  - pyspark=3.1.2=pyhd3eb1b0_0
+#  - pyspark=3.1.2=pyhd3eb1b0_0
   - python=3.8.12=h12debd9_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python_abi=3.8=2_cp38
-  - pytorch=1.6.0=py3.8_cuda10.2.89_cudnn7.6.5_0
+#  - pytorch=1.6.0=py3.8_cuda10.2.89_cudnn7.6.5_0
   - pytz=2021.3=pyhd3eb1b0_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
   - pyyaml=5.4.1=py38h497a2fe_0
@@ -224,7 +224,7 @@ dependencies:
   - ruamel_yaml=0.15.100=py38h27cfd23_0
 #  - scikit-learn=1.0.1=py38h51133e4_0
 #  - scipy=1.7.1=py38h292c36d_2
-  - seaborn=0.11.2=pyhd3eb1b0_0
+#  - seaborn=0.11.2=pyhd3eb1b0_0
   - send2trash=1.8.0=pyhd3eb1b0_1
   - setuptools=58.0.4=py38h06a4308_0
   - shapely=1.7.1=py38h1728cc4_0
@@ -239,7 +239,7 @@ dependencies:
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tiledb=2.2.9=h91fcb0e_0
   - tk=8.6.11=h1ccaba5_0
-  - torchvision=0.7.0=py38_cu102
+#  - torchvision=0.7.0=py38_cu102
   - tornado=6.1=py38h27cfd23_0
   - tqdm=4.62.3=pyhd3eb1b0_1
   - traitlets=5.1.1=pyhd3eb1b0_0
@@ -252,7 +252,7 @@ dependencies:
   - webencodings=0.5.1=py38_1
   - wheel=0.37.0=pyhd3eb1b0_1
   - xerces-c=3.2.3=h780794e_0
-  - xgboost=1.5.0=py38h06a4308_1
+#  - xgboost=1.5.0=py38h06a4308_1
   - xlrd=2.0.1=pyhd3eb1b0_0
   - xyzservices=2021.11.0=pyhd8ed1ab_1
   - xz=5.2.5=h7b6447c_0
