--- a/environment.yml
+++ b/environment.yml
@@ -16,10 +16,10 @@ dependencies:
   - async-timeout=4.0.1=pyhd8ed1ab_0
   - async_generator=1.10=pyhd3eb1b0_0
   - attrs=21.2.0=pyhd3eb1b0_0
-  - aws-c-common=0.4.57=he6710b0_1
-  - aws-c-event-stream=0.1.6=h2531618_5
-  - aws-checksums=0.1.9=he6710b0_0
-  - aws-sdk-cpp=1.8.185=hce553d0_0
+#  - aws-c-common=0.4.57=he6710b0_1
+#  - aws-c-event-stream=0.1.6=h2531618_5
+#  - aws-checksums=0.1.9=he6710b0_0
+#  - aws-sdk-cpp=1.8.185=hce553d0_0
   - babel=2.9.1=pyhd3eb1b0_0
   - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
@@ -158,7 +158,7 @@ dependencies:
   - munch=2.5.0=py_0
   - munkres=1.1.4=py_0
   - mypy_extensions=0.4.3=py38h578d9bd_4
-  - nbclassic=0.2.6=pyhd3eb1b0_0
+#  - nbclassic=0.2.6=pyhd3eb1b0_0
 #  - nbclient=0.5.3=pyhd3eb1b0_0
 #  - nbconvert=6.1.0=py38h06a4308_0
 #  - nbformat=5.1.3=pyhd3eb1b0_0
@@ -206,7 +206,7 @@ dependencies:
   - pyqt=5.9.2=py38h05f1152_4
   - pyrsistent=0.18.0=py38heee7806_0
   - pysocks=1.7.1=py38h06a4308_0
-#  - pyspark=3.1.2=pyhd3eb1b0_0
+  - pyspark=3.1.2=pyhd3eb1b0_0
   - python=3.8.12=h12debd9_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python_abi=3.8=2_cp38
@@ -274,7 +274,7 @@ dependencies:
     - google-pasta==0.2.0
     - grpcio==1.32.0
     - h5py==2.10.0
-    - keras-preprocessing==1.1.2
+#    - keras-preprocessing==1.1.2
     - lxml==4.7.1
     - markdown==3.3.3
     - multitasking==0.0.10
@@ -286,10 +286,10 @@ dependencies:
     - requests-oauthlib==1.3.0
     - rsa==4.7
     - streamlit==1.2.0
-    - tensorboard==2.4.1
-    - tensorboard-plugin-wit==1.8.0
-    - tensorflow==2.4.1
-    - tensorflow-estimator==2.4.0
+#    - tensorboard==2.4.1
+#    - tensorboard-plugin-wit==1.8.0
+#    - tensorflow==2.4.1
+#    - tensorflow-estimator==2.4.0
     - termcolor==1.1.0
     - typing-extensions==3.7.4.3
     - werkzeug==1.0.1
