--- a/environment.yml
+++ b/environment.yml
@@ -62,6 +62,7 @@ dependencies:
   - google-api-core=2.3.2=pyhd8ed1ab_0
   - google-api-core-grpc=2.3.2=hd8ed1ab_0
   - google-auth=2.3.3=pyh6c4a22f_0
+  - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
   - google-cloud-bigquery=2.31.0=pyh44b312d_0
   - google-cloud-bigquery-core=2.31.0=pyh44b312d_0
   - google-cloud-bigquery-storage-core=2.10.1=pyh6c4a22f_0
@@ -137,12 +138,14 @@ dependencies:
   - numexpr=2.7.3=py38h22e1b3c_1
   - numpy=1.21.2=py38h20f2e39_0
   - numpy-base=1.21.2=py38h79a1101_0
+  - oauthlib=3.1.1=pyhd8ed1ab_0
   - olefile=0.46=pyh9f0ad1d_1
   - openjpeg=2.3.1=hf7af979_3
   - openssl=1.1.1l=h7f8727e_0
   - orc=1.6.9=ha97a36c_3
   - packaging=21.3=pyhd8ed1ab_0
   - pandas=1.3.4=py38h8c16a72_0
+  - pandas-gbq=0.16.0=pyh6c4a22f_0
   - parso=0.8.3=pyhd8ed1ab_0
   - pcre=8.45=h9c3ff4c_0
   - pexpect=4.8.0=pyh9f0ad1d_2
@@ -161,7 +164,9 @@ dependencies:
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
   - pycparser=2.21=pyhd8ed1ab_0
+  - pydata-google-auth=1.3.0=pyhd8ed1ab_0
   - pygments=2.10.0=pyhd8ed1ab_0
+  - pyjwt=2.3.0=pyhd8ed1ab_1
   - pyopenssl=21.0.0=pyhd8ed1ab_0
   - pyparsing=3.0.6=pyhd8ed1ab_0
   - pyproj=2.6.1.post1=py38hb3025e9_1
@@ -174,6 +179,7 @@ dependencies:
   - re2=2021.08.01=h9c3ff4c_0
   - readline=8.1=h27cfd23_0
   - requests=2.26.0=pyhd8ed1ab_1
+  - requests-oauthlib=1.3.0=pyh9f0ad1d_0
   - rsa=4.8=pyhd8ed1ab_0
   - rtree=0.9.7=py38h02d302b_3
   - scikit-learn=1.0.1=py38h51133e4_0
